--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@reis/mongoose-to-json": "^3.0.0",
     "express": "^4.21.1",
     "mongoose": "^8.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
