--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@reis/mongoose-to-json": "^3.0.0",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
     "mongoose": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "description": ""
 }
