--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reis/mongoose-to-json": "^3.0.0",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
     "mongoose": "^8.8.0"
   },
   "devDependencies": {
