--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reis/mongoose-to-json": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cron": "^3.2.1",
     "express": "^4.21.1",
     "express-jwt": "^8.4.1",
     "joi": "^17.13.3",
@@ -22,6 +23,8 @@
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "multer-savefilesorg": "^1.0.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
